tests/rosetta/out/C/angles-geometric-normalization-and-conversion.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:53Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
double d2d(double d) { return d % 360.0; }

double g2g(double g) { return g % 400.0; }

double m2m(double m) { return m % 6400.0; }

double r2r(double r) { return r % (2.0 * 3.141592653589793); }

double d2g(double d) { return d2d(d) * 400.0 / 360.0; }

double d2m(double d) { return d2d(d) * 6400.0 / 360.0; }

double d2r(double d) { return d2d(d) * 3.141592653589793 / 180.0; }

double g2d(double g) { return g2g(g) * 360.0 / 400.0; }

double g2m(double g) { return g2g(g) * 6400.0 / 400.0; }

double g2r(double g) { return g2g(g) * 3.141592653589793 / 200.0; }

double m2d(double m) { return m2m(m) * 360.0 / 6400.0; }

double m2g(double m) { return m2m(m) * 400.0 / 6400.0; }

double m2r(double m) { return m2m(m) * 3.141592653589793 / 3200.0; }

double r2d(double r) { return r2r(r) * 180.0 / 3.141592653589793; }

double r2g(double r) { return r2r(r) * 200.0 / 3.141592653589793; }

double r2m(double r) { return r2r(r) * 3200.0 / 3.141592653589793; }

int mochi_main() {
  list_float angles = list_float_create(12);
  angles.data[0] = (-2.0);
  angles.data[1] = (-1.0);
  angles.data[2] = 0.0;
  angles.data[3] = 1.0;
  angles.data[4] = 2.0;
  angles.data[5] = 6.2831853;
  angles.data[6] = 16.0;
  angles.data[7] = 57.2957795;
  angles.data[8] = 359.0;
  angles.data[9] = 399.0;
  angles.data[10] = 6399.0;
  angles.data[11] = 1000000.0;
  printf("degrees normalized_degs gradians mils radians\n");
  for (int tmp1 = 0; tmp1 < angles.len; tmp1++) {
    double a = angles.data[tmp1];
    char *tmp2 = _str(a);
    char *tmp3 = concat_string(tmp2, " ");
    char *tmp4 = _str(d2d(a));
    char *tmp5 = concat_string(tmp3, tmp4);
    char *tmp6 = concat_string(tmp5, " ");
    char *tmp7 = _str(d2g(a));
    char *tmp8 = concat_string(tmp6, tmp7);
    char *tmp9 = concat_string(tmp8, " ");
    char *tmp10 = _str(d2m(a));
    char *tmp11 = concat_string(tmp9, tmp10);
    char *tmp12 = concat_string(tmp11, " ");
    char *tmp13 = _str(d2r(a));
    char *tmp14 = concat_string(tmp12, tmp13);
    printf("%s\n", tmp14);
  }
  printf("\ngradians normalized_grds degrees mils radians\n");
  for (int tmp15 = 0; tmp15 < angles.len; tmp15++) {
    double a = angles.data[tmp15];
    char *tmp16 = _str(a);
    char *tmp17 = concat_string(tmp16, " ");
    char *tmp18 = _str(g2g(a));
    char *tmp19 = concat_string(tmp17, tmp18);
    char *tmp20 = concat_string(tmp19, " ");
    char *tmp21 = _str(g2d(a));
    char *tmp22 = concat_string(tmp20, tmp21);
    char *tmp23 = concat_string(tmp22, " ");
    char *tmp24 = _str(g2m(a));
    char *tmp25 = concat_string(tmp23, tmp24);
    char *tmp26 = concat_string(tmp25, " ");
    char *tmp27 = _str(g2r(a));
    char *tmp28 = concat_string(tmp26, tmp27);
    printf("%s\n", tmp28);
  }
  printf("\nmils normalized_mils degrees gradians radians\n");
  for (int tmp29 = 0; tmp29 < angles.len; tmp29++) {
    double a = angles.data[tmp29];
    char *tmp30 = _str(a);
    char *tmp31 = concat_string(tmp30, " ");
    char *tmp32 = _str(m2m(a));
    char *tmp33 = concat_string(tmp31, tmp32);
    char *tmp34 = concat_string(tmp33, " ");
    char *tmp35 = _str(m2d(a));
    char *tmp36 = concat_string(tmp34, tmp35);
    char *tmp37 = concat_string(tmp36, " ");
    char *tmp38 = _str(m2g(a));
    char *tmp39 = concat_string(tmp37, tmp38);
    char *tmp40 = concat_string(tmp39, " ");
    char *tmp41 = _str(m2r(a));
    char *tmp42 = concat_string(tmp40, tmp41);
    printf("%s\n", tmp42);
  }
  printf("\nradians normalized_rads degrees gradians mils\n");
  for (int tmp43 = 0; tmp43 < angles.len; tmp43++) {
    double a = angles.data[tmp43];
    char *tmp44 = _str(a);
    char *tmp45 = concat_string(tmp44, " ");
    char *tmp46 = _str(r2r(a));
    char *tmp47 = concat_string(tmp45, tmp46);
    char *tmp48 = concat_string(tmp47, " ");
    char *tmp49 = _str(r2d(a));
    char *tmp50 = concat_string(tmp48, tmp49);
    char *tmp51 = concat_string(tmp50, " ");
    char *tmp52 = _str(r2g(a));
    char *tmp53 = concat_string(tmp51, tmp52);
    char *tmp54 = concat_string(tmp53, " ");
    char *tmp55 = _str(r2m(a));
    char *tmp56 = concat_string(tmp54, tmp55);
    printf("%s\n", tmp56);
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
